# india-banking-connector

./: README.md  pyproject.toml
india_banking_connector/: api.py  hooks.py  modules.txt  utils.py
india_banking_connector/connectors/: __init__.py  axis_connector.py  bank_connector.py  connector.py  hdfc_connector.py  icici_connector.py  kotak_mahindra_connector.py  yes_bank_connector.py
india_banking_connector/connectors/doctype/connector_map/: connector_map.json  connector_map.py
india_banking_connector/connectors/doctype/connector_settings/: connector_settings.js  connector_settings.json  connector_settings.py  test_connector_settings.py
india_banking_connector/connectors/doctype/hdfc_connector/: hdfc_connector.js  hdfc_connector.json  hdfc_connector.py  test_hdfc_connector.py
india_banking_connector/connectors/doctype/icici_connector/: icici_connector.js  icici_connector.json  icici_connector.py  test_icici_connector.py
india_banking_connector/connectors/doctype/kotak_mahindra_connector/: kotak_mahindra_connector.js  kotak_mahindra_connector.json  kotak_mahindra_connector.py  test_kotak_mahindra_connector.py
india_banking_connector/connectors/doctype/yes_bank_connector/: test_yes_bank_connector.py  yes_bank_connector.js  yes_bank_connector.json  yes_bank_connector.py
india_banking_connector/fixtures/: bank.json  connector_settings.json
india_banking_connector/india_banking_connector/doctype/bank/: bank.js  bank.json  bank.py  test_bank.py
india_banking_connector/india_banking_connector/doctype/bank_request_log/: bank_request_log.js  (+3 more)
